# eotdl

./: .env.example  .gitignore  .verceligone  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  docker-compose.mcp.yml  docker-compose.test.yml  docker-compose.tutorials.yml  docker-compose.yml  pyproject.toml
cli/: README.md  pyproject.toml
cli/eotdl_cli/: main.py
cli/eotdl_cli/commands/: auth.py  datasets.py
cli/eotdl_cli/src/: utils.py
cli/eotdl_cli/src/errors/: auth.py
cli/eotdl_cli/src/repos/: APIRepo.py  AuthRepo.py
cli/eotdl_cli/src/usecases/auth/: Auth.py  Logout.py  __init__.py  main.py
cli/eotdl_cli/src/usecases/datasets/: DownloadDataset.py  IngestDataset.py  IngestLargeDataset.py  IngestLargeDatasetParallel.py  RetrieveDataset.py  RetrieveDatasets.py  UpdateDataset.py  __init__.py  main.py
cli/eotds_cli/: main.py
cli/tests/: _test_hello.py
cli/tests/unit/: test_auth.py  test_datasets.py
eotdl/: .flake8  .pylintrc  Dockerfile  README.md  _pyproject.toml  main.py  makefile  pyproject.toml  pyproject.toml.bck
eotdl/eotdl/: __init__.py  cli.py  hello.py  main.py
eotdl/eotdl/access/: __init__.py  download.py  matches.py  parameters.py  search.py  statistics.py  utils.py
eotdl/eotdl/access/airbus/: __init__.py  client.py  parameters.py  url.py  utils.py
eotdl/eotdl/access/sentinelhub/: __init__.py  client.py  evalscripts.py  parameters.py  utils.py
eotdl/eotdl/auth/: __init__.py  auth.py  errors.py  is_logged.py  logout.py  main.py
eotdl/eotdl/challenges/: __init__.py  retrieve.py  submit.py
eotdl/eotdl/commands/: auth.py  challenges.py  datasets.py  models.py  pipelines.py  stac.py
eotdl/eotdl/curation/: __init__.py  formatters.py  geodb.py  metadata.py
eotdl/eotdl/curation/folder_formatters/: __init__.py  base.py  sentinel_hub.py
eotdl/eotdl/curation/scaneo/: __init__.py  utils.py
eotdl/eotdl/curation/stac/: __init__.py  api.py  assets.py  create_stac_catalog_from_folder copy.py  create_stac_catalog_from_folder.py  create_stac_catalog_from_links.py  create_stac_items_from_folder.py  dataframe.py  dataframe_bck.py  dataframe_labeling.py  extensions.py  extent.py  labeling.py  ml_dataset.py  parsers.py  stac.py  utils.py
eotdl/eotdl/curation/stac/extensions/: __init__.py  base.py  dem.py  eo.py  label.py  ml_dataset.py  projection.py  raster.py  sar.py
eotdl/eotdl/curation/stac/extensions/label/: __init__.py  base.py  image_name_labeler.py  scaneo.py
eotdl/eotdl/curation/stac/utils/: __init__.py  geometry.py  metadata.py  paths.py  stac.py  time.py
eotdl/eotdl/datasets/: __init__.py  download.py  ingest.py  metadata.py  retrieve.py  stage.py  update.py
eotdl/eotdl/datasets/usecases/datasets/: DownloadDataset.py  DownloadFile.py  DownloadFileURL.py  IngestDataset.py  IngestFile.py  IngestLargeDataset.py  IngestLargeDatasetParallel.py  RetrieveDataset.py
eotdl/eotdl/fe/: __init__.py  ingest.py  retrieve.py  stage.py  update.py
eotdl/eotdl/fe/openeo/: __init__.py  advanced_patch_extraction.py  basic_point_extraction.py  dataframe_utils.py  temporal_utils.py
eotdl/eotdl/files/: __init__.py  get_file.py  get_url.py  ingest.bck  ingest.py  list_files.py  metadata.py
eotdl/eotdl/models/: __init__.py  download.py  ingest.py  metadata.py  retrieve.py  stage.py  update.py
eotdl/eotdl/pytorch/classification/: __init__.py  dm.py  ds.py  model.py  module.py
eotdl/eotdl/pytorch/multitasking/: __init__.py  dm.py  ds.py  model.py  module.py
eotdl/eotdl/pytorch/segmentation/: __init__.py  dm.py  ds.py  metrics.py  model.py  module.py
eotdl/eotdl/pytorch/superresolution/: __init__.py  dm.py  ds.py  module.py
eotdl/eotdl/pytorch/unsupervised/: __init__.py  dm.py  ds.py  module.py
eotdl/eotdl/repos/: APIRepo.py  AuthAPIRepo.py  AuthRepo.py  ChallengesAPIRepo.py  DatasetsAPIRepo.py  FEAPIRepo.py  FilesAPIRepo.py  ModelsAPIRepo.py  STACAPIRepo.py  __init__.py
eotdl/eotdl/shared/: __init__.py  checksum.py
eotdl/eotdl/src/: utils.py
eotdl/eotdl/src/repos/: APIRepo.py  AuthRepo.py  __init__.py
eotdl/eotdl/src/usecases/auth/: Auth.py  IsLogged.py  __init__.py
eotdl/eotdl/src/usecases/datasets/: DownloadDataset.py  DownloadFile.py  IngestFile.py  IngestFolder.py  IngestLargeDataset.py  IngestSTAC.py  RetrieveDatasets.py  UpdateDataset.py  __init__.py
eotdl/eotdl/tools/: __init__.py  ais_labelling.py  geo_utils.py  metadata.py  paths.py  stac.py  time_utils.py  tools.py
eotdl/eotdl/tools/sen12floods/: __init__.py  tools.py
eotdl/eotdl/wrappers/: __init__.py  models.py  utils.py
eotdl/tests/: _test_access.py  test_hello.py
eotdl/tests/load/: conftest.py  eotdl.tiers.json  test_upload_size.py
eotdl/tests/unit/: _test_auth.py  test_auth.py  test_datasets.py
eotdl/tests/unit/curation/stac/: fixtures.py  test_dataframe.py  test_extent.py  test_labels.py  test_ml_dataset.py  test_stac.py
eotdl/tests/unit/curation/stac/test_data/labels_scaneo/: Jaca_1_labels.geojson  Jaca_3_labels.geojson  Jaca_4_labels.geojson
eotdl/tests/unit/datasets/: _test_download_dataset.py  test_datasets.py  test_download_dataset.py  test_retrieve_datasets.py  test_stage_dataset.py  test_stage_parallel.py
eotdl/tests/unit/files/: test_metadata_write.py  test_stage_file_url.py
eotdl/tests/unit/tools/: test_geo_utils.py  test_metadata.py  test_paths.py  test_time_utils.py  test_tools.py
lib/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
lib/eotdl/: __init__.py  hello.py
lib/eotdl/access/: __init__.py
lib/eotdl/access/sentinelhub/: __init__.py  client.py  utils.py
lib/eotdl/curation/: __init__.py  formatters.py  metadata.py
lib/eotdl/curation/stac/: __init__.py  dataframe.py  extensions.py  stac.py  utils.py
lib/eotdl/models/: __init__.py
lib/eotdl/repos/auth/: Auth0Repo.py  __init__.py
lib/eotdl/tools/: __init__.py  stac.py  utils.py
lib/eotdl/tools/sen12floods/: __init__.py  tools.py
lib/eotdl/usecases/user/: Login.py  __init__.py  main.py
lib/eotds/: hello.py
lib/tests/: test_access.py  test_curation_stac.py  test_hello.py  test_test.py
lib/tests/unit/user/: test_persist_user.py
(+2367 files in other folders)
