[project]
name = "eotdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "minio>=7.2.15",
    "onnxruntime>=1.21.0",
    "python-dotenv>=1.1.0",
    "pytorch-eo>=2025.4.3",
    "segmentation-models-pytorch>=0.4.0",
]

[dependency-groups]
dev = [
    "boto3>=1.37.20",
    "pymongo>=4.11.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
