[project]
name = "eotdl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "folium>=0.19.7",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "imagecodecs>=2025.3.30",
    "jupyter>=1.1.1",
    "langchain-community>=0.3.21",
    "leafmap>=0.48.5",
    "matplotlib>=3.10.1",
    "minio>=7.2.15",
    "onnx>=1.18.0",
    "onnxruntime>=1.21.0",
    "openeo-gfmap>=0.4.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.3",
    "pyjwt>=2.10.1",
    "pystac>=1.13.0",
    "python-dotenv>=1.1.0",
    "python-frontmatter>=1.1.0",
    "python-multipart>=0.0.20",
    "pytorch-eo>=2025.4.3",
    "qdrant-client>=1.12.1",
    "requests>=2.32.3",
    "scaneo>=2025.6.18.post7",
    "segmentation-models-pytorch>=0.4.0",
    "sentence-transformers>=5.1.1",
    "sentinelhub>=3.11.1",
    "stac-geoparquet>=0.6.0",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "boto3>=1.37.20",
    "pymongo>=4.11.3",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "s5cmd>=0.3.3",
]
