[tool.poetry]
name = "eotdl-cli"
version = "0.0.1"
description = ""
authors = ["EarthPulse <it@earthpulse.es>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eotdl_cli"}]

[tool.poetry.scripts]
eotdl-cli = "eotdl_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"
jwt = {extras = ["crypto"], version = "^1.3.1"}
pydantic = "^1.10.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
