[tool.poetry]
name = "eotdl-cli"
version = "2023.05.11"
description = ""
authors = ["EarthPulse <it@earthpulse.es>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eotdl_cli"}]

[tool.poetry.scripts]
eotdl-cli = "eotdl_cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}
requests = "^2.28.2"
pydantic = "^1.10.6"
tqdm = "^4.65.0"
pyjwt = "^2.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
