[tool.poetry]
name = "eotdl"
version = "2023.10.20"
description = "Earth Observation Training Data Lab"
authors = ["EarthPulse <it@earthpulse.es>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eotdl"}]

[tool.poetry.scripts]
eotdl = "eotdl.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.28.2"
pydantic = "^1.10.6"
tqdm = "^4.65.0"
pyjwt = "^2.6.0"
pystac = "^1.8.2"
geomet = "^1.0.0"
geopandas = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
