[tool.poetry]
name = "eotdl"
version = "2023.10.25-10"
description = "Earth Observation Training Data Lab"
authors = ["EarthPulse <it@earthpulse.es>"]
license = "MIT"
readme = "README.md"
packages = [{include = "eotdl"}]

[tool.poetry.scripts]
eotdl = "eotdl.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.9.0"}
requests = "^2.28.2"
pydantic = "^1.10.6"
tqdm = "^4.65.0"
pyjwt = "^2.6.0"
pystac = { version = "^1.8.2", extras = ["validation"] }
geomet = "^1.0.0"
geopandas = "^0.13.2"
rasterio = "^1.3.9"
sentinelhub = "^3.9.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-watch = "^4.2.0"
pytest-mock = "^3.6.1"
pylint = "^3.0.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
