[tool.poetry]
name = "eotdl"
version = "0.0.1"
description = "Earth Obsertvation Training Datasets Lab"
authors = ["EarthPulse <it@earthpulse.es>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
pymongo = "^4.3.3"
auth0-python = "^4.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
